# Type-System

./: README.md
Lambda/: AulaLambda.cabal  AulaLambda.hs  Lambda.hs  README.md  Type.hs
